--- a/Cond_VAE_Generative.ipynb
+++ b/Cond_VAE_Generative.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
      "slide_type": "notes"
@@ -85,6 +85,7 @@
        "\\newcommand{\\margin}{{\\mathbb{m}}}\n",
        "\\newcommand{\\lmk}{\\boldsymbol{\\ell}}\n",
        "%\n",
+       "%\n",
        "% Functions with arguments\n",
        "\\def\\xsy#1#2{#1^#2}\n",
        "\\def\\rand#1{\\tilde{#1}}\n",
@@ -110,6 +111,11 @@
        "%\n",
        "% Expectation operator\n",
        "\\def\\Exp#1{\\underset{#1} {\\operatorname{\\mathbb{E}}} }\n",
+       "%\n",
+       "% VAE\n",
+       "\\def\\prs#1#2{\\mathcal{p}_{#2}(#1)}\n",
+       "\\def\\qr#1{\\mathcal{q}(#1)}\n",
+       "\\def\\qrs#1#2{\\mathcal{q}_{#2}(#1)}\n",
        "%\n",
        "% Reinforcement learning\n",
        "\\newcommand{\\Actions}{{\\mathcal{A}}} \n",
@@ -153,13 +159,68 @@
     }
    },
    "source": [
-    "# Review: Large Language Models\n",
+    "# Conditional VAE\n",
     "\n",
-    "The *Language Modeling* task is to extend a sequence of words with the likely *next* word.\n",
+    "One of the drawbacks of the plain Autoencoder and VAE when used to generate synthetic examples\n",
+    "- Can't specify the class of the synthetic feature vectors produced\n",
     "\n",
-    "This process can be repeated, resulting in the generation of complete stories from a short \"seed\" of a few words.\n",
+    "The Conditional VAE addresses this problem."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "The Encoder and Decoder components of the Conditional VAE\n",
+    "- Each take a second input: the class label of the example\n",
+    "- The Encoder merely passes this class label directly to its output\n",
+    "    - where, in training, it is used as the class label input of the Decoder\n",
+    "- The Encoder is otherwise identical to the one in the \"unconditional\" VAE\n",
+    "- To generate a synthetic feature vector\n",
+    "    - pass the class label desired along with a latent to the Decoder\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "<table>\n",
+    "   <tr>\n",
+    "            <th>Conditional VAE: Components</th>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <td><img src=\"images/Autoencoder_CVAE.png\" width=100%></td>\n",
+    "    </tr>\n",
     "\n",
-    "Language Models are the basis for a great deal of the current revolution in Generative AI>"
+    "</table>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "Note that the class label does not affect the Encoder at all\n",
+    "- latent representation does not depend on it\n",
+    "\n",
+    "For the Decoder\n",
+    "- there is no pre-determined manner in which the class label needs to influence the architecture\n",
+    " - we choose to concatenate the class label (as a OHE vector) to the output of an intermediate layer of the \"non-conditional\" Decoder\n",
+    "- it merely conditions the Decoder on both the class label and the latent\n",
+    "    $$\\tilde \\x \\in \\prs{\\x \\mid \\z, \\c}{\\Theta}$$\n",
+    "    - rather than just the latent\n",
+    "   "
    ]
   },
   {
@@ -170,67 +231,50 @@
     }
    },
    "source": [
-    "# Language Models: the future (present ?) of NLP ?\n",
+    "# Code\n",
     "\n",
-    "The Language Model objective is a simple NLP training objective.\n",
     "\n",
-    "However, it seems to result in models that have the ability to easily adapt to solve *other* objectives.\n",
     "\n",
-    "This leads to a new paradigm called *Pre-training + Fine-Tuning*\n",
-    "- train a large model, on lots of data, using the Language Model objective\n",
-    "- Fine-tune this model on a small number of examples from a new Target Task\n",
+    "<table>\n",
+    "   <tr>\n",
+    "            <th>Conditional VAE: Components</th>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <td><img src=\"images/cond_vae_conv_encoder.png\" width=100%></td>\n",
+    "        <td><img src=\"images/cond_vae_conv_decoder.png\" width=100%></td>\n",
+    "    </tr>\n",
     "\n",
-    "Let's learn about this objective and some of the models that have been trained using it.\n",
-    "\n",
-    "- [Language Models](NLP_Language_Models.ipynb)\n",
-    "- [Large Language Models](NLP_Large_Language_Models.ipynb)"
+    "</table>"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
-    "#  In-context Learning \n",
+    "<table>\n",
+    "   <tr>\n",
+    "       <th><center>Synthetic MNIST examples from a Conditional VAE: vary the 2 components of a 2D latent $\\z$; fixed label</center></th>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <td><img src=\"images/cond_vae_outputgrid.png\" width=90%></td>\n",
+    "    </tr>\n",
     "\n",
-    "In addition to a Large Language Model easily adapting to a new task via Fine-Tuning\n",
-    "- LLM's seem to have the ability to solve new Target tasks\n",
-    "- *without* further training (Fine-Tuning)\n",
-    "- just by being show instances of examples for the new task *at inference time*\n",
-    "\n",
-    "This is called *In-Context Learning*.\n",
-    "\n",
-    "- [In-Context Learning](In_Context_Learning.ipynb)\n",
-    "\n",
-    "\n",
-    "Here is a very crude notebook that uses the HuggingFace inference API to experiment with in-context learning.\n",
-    "\n",
-    "- [Experiment in In context learning: Colab](https://colab.research.google.com/github/kenperry-public/ML_Advanced_Fall_2023/blob/master/HF_inference_play.ipynb)\n",
-    "- [Experiment in In context learning: local](HF_inference_play.ipynb)\n",
-    "\n",
-    "## Beyond the LLM\n",
-    "- [PreTrain_Prompt_Predict](NLP_Beyond_LLM.ipynb)\n",
-    "- [From LLM to Bing Search](From_GPT_to_BingSearch.ipynb)\n",
-    "\n",
-    "<!--- #include (squad_show.csv) --->\n"
+    "</table>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Done\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"Done\")"
    ]
