--- a/Index_Advanced.ipynb
+++ b/Index_Advanced.ipynb
@@ -122,12 +122,102 @@
     "### Transformers: Review continued\n",
     "- [Attention (continued)](Intro_to_Attention.ipynb#Attention)\n",
     "- [Transformer](Transformer.ipynb)\n",
-    "- [Implementing Attention](Attention_Lookup.ipynb) \n",
+    "\n",
     "\n",
     "### [Natural Language Processing: Review](Review_NLP.ipynb)\n",
-    "\n",
-    "### [Language Models, the future (present ?) of NLP: Review](Review_LLM.ipynb)\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "\n",
+    "## Functional Models\n",
+    "\n",
+    "**Plan**\n",
+    "\n",
+    "Enough theory (for the moment) !\n",
+    "\n",
+    "The Transformer (whose theory we have presented) is built from plain Keras.\n",
+    "\n",
+    "Our goal is to dig into the **code** for the Transformer so that you too will learn how to build advanced models.\n",
+    "\n",
+    "Before we can do this, we must\n",
+    "- go beyond the Sequential model of Keras: introduction to the Functional model\n",
+    "- understand more \"advanced\" features of Keras: customomizing layers,  training loops, loss functions\n",
+    "- The Datasets API\n",
+    "\n",
+    "**Basics**\n",
+    "\n",
+    "We start with the basics of Functional models, and will give a coding example of such a model in Finance.\n",
+    "\n",
+    "- [Functional API](Functional_Models.ipynb)\n",
+    "\n",
+    "\n",
+    "### Functional Model Code:  A Functional model in Finance: \"Factor model\"\n",
+    "\n",
+    "We illustrate the basic features of Functional models with an example\n",
+    "- does not use the additional techniques of the next section (Advanced Keras)\n",
+    "\n",
+    "[Autoencoders for Conditional Risk Factors](Autoencoder_for_conditional_risk_factors.ipynb)\n",
+    "- [code](https://github.com/stefan-jansen/machine-learning-for-trading/blob/main/20_autoencoders_for_conditional_risk_factors/06_conditional_autoencoder_for_asset_pricing_model.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Week 3\n",
+    "\n",
+    "## Advanced Keras\n",
+    "\n",
+    "**We covered most of this as part of the [Functional API](Functional_Models.ipynb)**\n",
+    "- the following links are meant as deeper references\n",
+    "\n",
+    "Keras provides many features that make it easier to write complex models\n",
+    "- Custom layer types\n",
+    "- Custom training loops\n",
+    "- Custom Loss functions\n",
+    "\n",
+    "We will illustrate these techniques with a coding example.\n",
+    "\n",
+    "- [Multiple models combined: Transformer](Keras_Advanced.ipynb#Functional-model:-the-basics,-illustrated-by-the-Transformer)\n",
+    "- [Custom layers](Keras_Advanced.ipynb#Custom-layers:-subtle-point)\n",
+    "- [Custom loss, Custom training loop](Keras_Advanced.ipynb#Model-specialization)\n",
+    "- [Threading](Keras_Advanced.ipynb#Factor-Models-and-Autoencoders:-Threading)\n",
+    "    - In our [Autoencoders for Conditional Risk Factors](Autoencoder_for_conditional_risk_factors.ipynb)\n",
+    "    last week, we skipped over an important detail\n",
+    "        - the \"Beta\" side of the notebook takes as input a () matrix rather than a vector\n",
+    "        - how does a `Dense` layer work on higher dimensional data ?\n",
+    "   \n",
+    "\n",
+    "### Advanced Keras code:  Neural Style Transfer: Non-trivial Loss function\n",
+    "\n",
+    "- [Neural Style Transfer](Neural_Style_Transfer.ipynb)\n",
+    "\n",
+    " "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Review/Preview (continue)\n",
+    "\n",
+    "### [Language Models, the future (present ?) of NLP: Review](Review_LLM.ipynb)"
    ]
   },
   {
@@ -185,41 +275,129 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "**Plan**\n",
+    "\n",
+    "We continue our exploration of the Functional API in Keras.\n",
+    "\n",
+    "We will spend some time examining the code for the Transformer.\n",
+    "\n",
+    "We will also introduce the TensorFlow Dataset (TFDS) API, a way to consume large datasets using a limited amount of memory.\n",
+    "\n",
+    "THIS WILL BE A VERY CODE-INTENSIVE WEEK\n",
+    "\n",
+    "## Datasets: Big data in small memory\n",
+    "\n",
+    "**Plan**\n",
+    "\n",
+    "Last piece of technical info to enable the project\n",
+    "\n",
+    "- [TensorFlow Dataset](TF_Data_API.ipynb)\n",
+    "\n",
+    "**Background**\n",
+    "- [Python generators](Generators.ipynb)\n",
+    "\n",
+    "**Notebooks**\n",
+    "- [Dataset API: play around](TFDatasets_play_v1.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Putting it all together: Code: the Transformer\n",
+    "\n",
+    "### Attention in detail\n",
+    "\n",
+    "In our review, we had deferred a detailed view of implementing Attention. Now we will\n",
+    "explore it at a very high level (before seeing it implemented in code as part of the section on Transformer Code)\n",
+    "\n",
+    "- [Implementing Attention](Attention_Lookup.ipynb)\n",
+    "\n",
+    "We *will not* spend time on the actual code.  If you're interested there are several web articles\n",
+    "that do so, for example, [here](https://machinelearningmastery.com/how-to-implement-multi-head-attention-from-scratch-in-tensorflow-and-keras/)\n",
+    "\n",
+    "\n",
+    "We now have enough background to understand the code for the Transformer.\n",
+    "\n",
+    "We will examine the code in the excellent [TensorFlow tutorial on the Transformer](https://www.tensorflow.org/text/tutorials/transformer)\n",
+    "\n",
+    "[The Transformer: Code](Transformer_code.ipynb)\n",
+    "\n",
+    "**Suggested reading**\n",
+    "\n",
+    "[Tensorflow tutorial: Neural machine translation with a Transformer and Keras](https://www.tensorflow.org/text/tutorials/transformer)\n",
+    "\n",
+    "\n",
+    "\n",
+    "## Functional models: subtleties\n",
+    "- [Computation Graphs](Computation_Graphs.ipynb)\n",
+    "- [Eager vs Graph Execution](TF_Graph.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
      "slide_type": "subslide"
     }
    },
    "source": [
+    "# Week 4\n",
     "\n",
-    "## Functional Models\n",
+    "## Synthetic Data: Autoencoders\n",
     "\n",
-    "**Plan**\n",
+    "New major topic: Synthetic data.\n",
     "\n",
-    "Enough theory (for the moment) !\n",
+    "After last week's \"code-heavy\" modules, we are back to \"theory\" !\n",
     "\n",
-    "The Transformer (whose theory we have presented) is built from plain Keras.\n",
-    "\n",
-    "Our goal is to dig into the **code** for the Transformer so that you too will learn how to build advanced models.\n",
-    "\n",
-    "Before we can do this, we must\n",
-    "- go beyond the Sequential model of Keras: introduction to the Functional model\n",
-    "- understand more \"advanced\" features of Keras: customomizing layers,  training loops, loss functions\n",
-    "- The Datasets API\n",
-    "\n",
-    "**Basics**\n",
-    "\n",
-    "We start with the basics of Functional models, and will give a coding example of such a model in Finance.\n",
-    "\n",
-    "- [Functional API](Functional_Models.ipynb)\n",
+    "We will address several ways to create new examples, staring with the simplest model and moving on to models that are more complex.\n",
     "\n",
     "\n",
-    "### Functional Model Code:  A Functional model in Finance: \"Factor model\"\n",
+    "Generating synthetic data using Autoencoders and its variants.\n",
     "\n",
-    "We illustrate the basic features of Functional models with an example\n",
-    "- does not use the additional techniques of the next section (Advanced Keras)\n",
+    "### \"Vanilla\" Autoencoder\n",
     "\n",
-    "[Autoencoders for Conditional Risk Factors](Autoencoder_for_conditional_risk_factors.ipynb)\n",
-    "- [code](https://github.com/stefan-jansen/machine-learning-for-trading/blob/main/20_autoencoders_for_conditional_risk_factors/06_conditional_autoencoder_for_asset_pricing_model.ipynb)"
+    "[Autoencoder](Autoencoders_Generative.ipynb)\n",
+    "\n",
+    "**Suggested Reading**\n",
+    "\n",
+    "[TensorFlow Tutorial on Autoencoders](https://www.tensorflow.org/tutorials/generative/autoencoder)\n",
+    "\n",
+    "\n",
+    "### Variational Autoencoder (VAE)\n",
+    "\n",
+    "\n",
+    "We now study a different type of Autoencoder\n",
+    "- that learns a *distribution* over the training examples\n",
+    "- by sampling from this distribution: we can create synthetic examples\n",
+    "\n",
+    "[Variational Autoeconder (VAE)](VAE_Generative.ipynb)\n",
+    "\n",
+    "**Suggested Reading**\n",
+    "\n",
+    "[TensorFlow tutorial on VAE](https://www.tensorflow.org/tutorials/generative/cvae)\n",
+    "\n",
+    "**Further reading**\n",
+    "\n",
+    "[Tutorial on VAE](https://arxiv.org/pdf/1606.05908.pdf)\n",
+    "\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
