Lessons 3 and 4, improved order

--- a/Index_Advanced.ipynb
+++ b/Index_Advanced.ipynb
@@ -178,32 +178,39 @@
    "source": [
     "# Week 3\n",
     "\n",
+    "**Plan**\n",
+    "\n",
+    "We continue our study of Functional Models, introducing Advanced capabilities of Keras.\n",
+    "\n",
+    "## Threading\n",
+    "\n",
+    "In our [Autoencoders for Conditional Risk Factors](Autoencoder_for_conditional_risk_factors.ipynb)\n",
+    "last week, we skipped over an important detail\n",
+    "- the \"Beta\" side of the notebook takes as input a matrix rather than a vector\n",
+    "- how does a `Dense` layer work on higher dimensional data ?\n",
+    "\n",
+    "The answer is similar to how Python works:  [Threading](Keras_Advanced.ipynb#Factor-Models-and-Autoencoders:-Threading)\n",
+    "\n",
     "## Advanced Keras\n",
     "\n",
-    "**We covered most of this as part of the [Functional API](Functional_Models.ipynb)**\n",
-    "- the following links are meant as deeper references\n",
+    "- As part of our introduction to the [Functional API](Functional_Models.ipynb) we briefly covered\n",
+    "some advanced topics\n",
+    "    - [Custom layer type](Keras_Advanced.ipynb#Layer-specialization)\n",
     "\n",
-    "Keras provides many features that make it easier to write complex models\n",
-    "- Custom layer types\n",
-    "- Custom training loops\n",
-    "- Custom Loss functions\n",
+    "- We continue with some other useful techniques, emphasizing interesting \"Loss\" functions\n",
+    "    - [Custom loss, Custom training loop](Keras_Advanced.ipynb#Model-specialization)\n",
+    "    - [Non-trivial Custom Loss: Neural Style Transfer](Neural_Style_Transfer.ipynb)\n",
+    "    - [Gradient Ascent: Maximize utility for visualization](Keras_Advanced.ipynb#Visualizing-what-CNN's-learn:-Gradient-Ascent-and-the-Gradient-Tape)\n",
     "\n",
-    "We will illustrate these techniques with a coding example.\n",
+    "**Deeper dives**\n",
     "\n",
-    "- [Multiple models combined: Transformer](Keras_Advanced.ipynb#Functional-model:-the-basics,-illustrated-by-the-Transformer)\n",
-    "- [Custom layers](Keras_Advanced.ipynb#Custom-layers:-subtle-point)\n",
-    "- [Custom loss, Custom training loop](Keras_Advanced.ipynb#Model-specialization)\n",
-    "- [Threading](Keras_Advanced.ipynb#Factor-Models-and-Autoencoders:-Threading)\n",
-    "    - In our [Autoencoders for Conditional Risk Factors](Autoencoder_for_conditional_risk_factors.ipynb)\n",
-    "    last week, we skipped over an important detail\n",
-    "        - the \"Beta\" side of the notebook takes as input a () matrix rather than a vector\n",
-    "        - how does a `Dense` layer work on higher dimensional data ?\n",
-    "   \n",
+    "We have a [notebook](Keras_Advanced.ipynb)that is a **reference** to all the advanced techniques.\n",
+    "- most will be introduced as part of our study of different interesting models\n",
+    "- but this notebook is one convenient place to see them all\n",
     "\n",
-    "### Advanced Keras code:  Neural Style Transfer: Non-trivial Loss function\n",
-    "\n",
-    "- [Neural Style Transfer](Neural_Style_Transfer.ipynb)\n",
-    "\n",
+    "If you *really* want to dig into the micro-details of TensorFlow, here are some important subtleties\n",
+    "- [Computation Graphs](Computation_Graphs.ipynb)\n",
+    "- [Eager vs Graph Execution](TF_Graph.ipynb)\n",
     " "
    ]
   },
@@ -215,9 +222,58 @@
     }
    },
    "source": [
-    "## Review/Preview (continue)\n",
+    "## Putting it all together: Code: the Transformer\n",
     "\n",
-    "### [Language Models, the future (present ?) of NLP: Review](Review_LLM.ipynb)"
+    "**Plan**\n",
+    "\n",
+    "With the base of advanced Keras under our belts, it's time to understand the Transformer, in code\n",
+    "\n",
+    "We will examine the code in the excellent [TensorFlow tutorial on the Transformer](https://www.tensorflow.org/text/tutorials/transformer)\n",
+    "\n",
+    "[The Transformer: Code](Transformer_code.ipynb)\n",
+    "\n",
+    "**Deeper dive**\n",
+    "\n",
+    "- [Residual connections](RNN_Residual_Networks.ipynb)\n",
+    "\n",
+    "### Attention in detail\n",
+    "\n",
+    "In our review, we had deferred a detailed view of implementing Attention. Now we will\n",
+    "explore it at a very high level (before seeing it implemented in code as part of the section on Transformer Code)\n",
+    "\n",
+    "- [Implementing Attention](Attention_Lookup.ipynb)\n",
+    "\n",
+    "We *will not* spend time on the actual code.  If you're interested there are several web articles\n",
+    "that do so, for example, [here](https://machinelearningmastery.com/how-to-implement-multi-head-attention-from-scratch-in-tensorflow-and-keras/)\n",
+    "\n",
+    "\n",
+    "\n",
+    "**Suggested reading**\n",
+    "\n",
+    "There is an excellent tutorial on Attention and the Transformer which I recommend:\n",
+    "- [Tensorflow tutorial: Neural machine translation with a Transformer and Keras](https://www.tensorflow.org/text/tutorials/transformer)\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Review/Preview: Language Models (continue)\n",
+    "\n",
+    "Large Language Modells (LLMs) are the basis of the amazing advances we are witnessing in NLP (e.g., GPT).\n",
+    "\n",
+    "It will also be an essential part of our Final Project.\n",
+    "\n",
+    "Let's introduce the topic.\n",
+    "\n",
+    "[Language Models, the future (present ?) of NLP: Review](Review_LLM.ipynb)"
    ]
   },
   {
@@ -279,6 +335,8 @@
     }
    },
    "source": [
+    "## Datasets: Big data in small memory\n",
+    "\n",
     "**Plan**\n",
     "\n",
     "We continue our exploration of the Functional API in Keras.\n",
@@ -289,7 +347,6 @@
     "\n",
     "THIS WILL BE A VERY CODE-INTENSIVE WEEK\n",
     "\n",
-    "## Datasets: Big data in small memory\n",
     "\n",
     "**Plan**\n",
     "\n",
@@ -302,44 +359,6 @@
     "\n",
     "**Notebooks**\n",
     "- [Dataset API: play around](TFDatasets_play_v1.ipynb)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "## Putting it all together: Code: the Transformer\n",
-    "\n",
-    "### Attention in detail\n",
-    "\n",
-    "In our review, we had deferred a detailed view of implementing Attention. Now we will\n",
-    "explore it at a very high level (before seeing it implemented in code as part of the section on Transformer Code)\n",
-    "\n",
-    "- [Implementing Attention](Attention_Lookup.ipynb)\n",
-    "\n",
-    "We *will not* spend time on the actual code.  If you're interested there are several web articles\n",
-    "that do so, for example, [here](https://machinelearningmastery.com/how-to-implement-multi-head-attention-from-scratch-in-tensorflow-and-keras/)\n",
-    "\n",
-    "\n",
-    "We now have enough background to understand the code for the Transformer.\n",
-    "\n",
-    "We will examine the code in the excellent [TensorFlow tutorial on the Transformer](https://www.tensorflow.org/text/tutorials/transformer)\n",
-    "\n",
-    "[The Transformer: Code](Transformer_code.ipynb)\n",
-    "\n",
-    "**Suggested reading**\n",
-    "\n",
-    "[Tensorflow tutorial: Neural machine translation with a Transformer and Keras](https://www.tensorflow.org/text/tutorials/transformer)\n",
-    "\n",
-    "\n",
-    "\n",
-    "## Functional models: subtleties\n",
-    "- [Computation Graphs](Computation_Graphs.ipynb)\n",
-    "- [Eager vs Graph Execution](TF_Graph.ipynb)"
    ]
   },
   {
