--- a/TF_Data_API.ipynb
+++ b/TF_Data_API.ipynb
@@ -281,7 +281,7 @@
     }
    },
    "source": [
-    "###  [`from_tensor_slices](https://www.tensorflow.org/api_docs/python/tf/data/Dataset#from_tensor_slices)\n",
+    "###  [`from_tensor_slices`](https://www.tensorflow.org/api_docs/python/tf/data/Dataset#from_tensor_slices)\n",
     "\n",
     "Creates a Dataset with *multiple* elements from a higher dimensional Tensor\n",
     "- The first dimension indexes over elements\n",
