Understanding the Transformer module addded

--- a/Index_Advanced.ipynb
+++ b/Index_Advanced.ipynb
@@ -230,7 +230,8 @@
     "\n",
     "We will examine the code in the excellent [TensorFlow tutorial on the Transformer](https://www.tensorflow.org/text/tutorials/transformer)\n",
     "\n",
-    "[The Transformer: Code](Transformer_code.ipynb)\n",
+    "- [The Transformer: Understanding the Pieces](Transformer_Understanding_the_Pieces.ipynb)\n",
+    "- [The Transformer: Code](Transformer_code.ipynb)\n",
     "\n",
     "**Deeper dive**\n",
     "\n",
