--- a/NLP_Beyond_LLM.ipynb
+++ b/NLP_Beyond_LLM.ipynb
@@ -266,12 +266,13 @@
     }
    },
    "source": [
-    "The exemplars used in CoT prompting\n",
+    "The **exemplars** used in CoT prompting\n",
     "- demonstrate step by step reasoning in the expected output\n",
     "\n",
     "We can see the difference in the exemplar's \"Example Output\" section\n",
     "- using \"Standard Prompting\" (on the left)\n",
     "- versus using \"CoT Prompting\" (on the right)\n",
+    "    - the first exemplar (example) demonstrates step-by-step reasoning\n",
     "\n",
     "<table>\n",
     "    <center><strong>Chain of Thought Prompting</strong></center>\n",
@@ -548,7 +549,7 @@
     "- describing both the technical properties\n",
     "- and the social aspects (biases)\n",
     "\n",
-    "[Here](https://huggingface.co/gpt2) is an example of a model card."
+    "[Here](https://huggingface.co/openai-gpt) is an example of a model card."
    ]
   },
   {
