--- a/NLP_Large_Language_Models.ipynb
+++ b/NLP_Large_Language_Models.ipynb
@@ -189,7 +189,7 @@
     "- Next sentence prediction\n",
     "    - does one sentence follow from another\n",
     "\n",
-    "(For a list of auxiliary tasks used, see [here](https://arxiv.org/pdf/2107.13586.pdf#page=44)"
+    "(For a list of auxiliary tasks used, see [here](https://arxiv.org/pdf/2107.13586.pdf#page=44))"
    ]
   },
   {
@@ -779,7 +779,7 @@
     "One **cannot** make an apples-to-apples comparison of number of parameters as GPT-4\n",
     "uses a *Mixture of Experts (MOE)* model\n",
     "- 16 experts\n",
-    "    - each of size $111$ million parameters\n",
+    "    - each of size $111$ billion parameters\n",
     "    - each specializes in certain tasks (e.g., areas of knowledge)\n",
     "\n",
     "There are also $55$ billion parameters for attention (the $\\W_Q, \\W_K, \\W_V$ matrices ?)\n",
@@ -816,9 +816,9 @@
     "\\begin{array}\\\\\n",
     "\\text{number of parameters used} & =  \\\\\n",
     "& = & 2 & &\\text{number of experts} \\\\\n",
-    "&   &   * &  .111 & \\text{billions of parameters per expert} \\\\\n",
-    "&   &    + & ? & \\text{shared attention parameters} \\\\\n",
-    "& = & .280 &  & \\text{billions of parameters}\n",
+    "&   &   * &  111 & \\text{billions of parameters per expert} \\\\\n",
+    "&   &    + & 55 & \\text{billion shared attention parameters: } \\W_Q, \\W_K, \\W_V \\\\\n",
+    "& = & 280 &  & \\text{billions of parameters}\n",
     "\\end{array}\n",
     "$$\n",
     "    - inference cost $560$ TFlops\n",
@@ -826,7 +826,7 @@
     "$$\n",
     "\\begin{array}\\\\\n",
     " ~ & ~ & ~ & ~ \\\\\n",
-    "\\text{number of parameters used} & =  & 1.8 &  & \\text{billions of parameters} \\\\\n",
+    "\\text{number of parameters used} & =  & 16 * 111 + 55 \\approx 1.8 &  & \\text{trillions of parameters} \\\\\n",
     "\\end{array}\n",
     "$$\n",
     "    - inference cost $3700$ TFlops"
