--- a/NLP_Word_Representations.ipynb
+++ b/NLP_Word_Representations.ipynb
@@ -169,6 +169,9 @@
    "source": [
     "## Embeddings\n",
     "\n",
+    "[**Reference to intro course module**](NLP_Embeddings.ipynb)\n",
+    "\n",
+    "\n",
     "A token is encoded as short, dense vector\n",
     "$$\n",
     "\\begin{array} \\\\\n",
