--- a/Review_LLM.ipynb
+++ b/Review_LLM.ipynb
@@ -159,7 +159,7 @@
     "\n",
     "This process can be repeated, resulting in the generation of complete stories from a short \"seed\" of a few words.\n",
     "\n",
-    "Language Models are the basis for a great deal of the current revolution in Generative AI>"
+    "Language Models are the basis for a great deal of the current revolution in Generative AI."
    ]
   },
   {
