Fixed TFDatasets_play_v1.ipynb for new version of libraries on Colab

--- a/Transformer_Understanding_the_Pieces.ipynb
+++ b/Transformer_Understanding_the_Pieces.ipynb
@@ -370,16 +370,14 @@
    "source": [
     "# Linear \n",
     "\n",
-    "This layer is append *only* to the final block in the stacked Transformer blocks\n",
-    "- Projects the final block's output of length $d$\n",
-    "- to the length of the Vocabulary representation \n",
-    "    - a vector of length equal to number of elements of the Vocabulary\n",
-    "    - logits\n",
-    "        - to be converted into probability distribution over elements of the Vocabulary\n",
-    "- typical Classifier output behavior\n",
+    "This layer is append *only* to the final block in the stacked Transformer blocks.\n",
     "\n",
-    "It's only purpose is to make sure that the output is the correct shape\n",
-    "- no non-linearity"
+    "It acts as a typical Classifier\n",
+    "- \"classifies\" the final block's output of length $d$\n",
+    "- returning a vector\n",
+    "    - whose length is equal to number of elements of the Vocabulary\n",
+    "    - each element is a logit\n",
+    "        - to be converted into probability distribution over elements of the Vocabulary\n"
    ]
   },
   {
