--- a/Attention_Lookup.ipynb
+++ b/Attention_Lookup.ipynb
@@ -956,6 +956,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "We *will not* spend time on the actual code of an Attention layer.\n",
+    "\n",
+    "If you're interested there are several web articles\n",
+    "that do so, for example, [here](https://machinelearningmastery.com/how-to-implement-multi-head-attention-from-scratch-in-tensorflow-and-keras/)\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
