--- a/Index_Advanced.ipynb
+++ b/Index_Advanced.ipynb
@@ -233,27 +233,15 @@
     "- [The Transformer: Understanding the Pieces](Transformer_Understanding_the_Pieces.ipynb)\n",
     "- [The Transformer: Code](Transformer_code.ipynb)\n",
     "\n",
-    "**Deeper dive**\n",
-    "\n",
-    "- [Residual connections](RNN_Residual_Networks.ipynb)\n",
-    "\n",
-    "### Attention in detail\n",
-    "\n",
-    "In our review, we had deferred a detailed view of implementing Attention. Now we will\n",
-    "explore it at a very high level (before seeing it implemented in code as part of the section on Transformer Code)\n",
-    "\n",
-    "- [Implementing Attention](Attention_Lookup.ipynb)\n",
-    "\n",
-    "We *will not* spend time on the actual code.  If you're interested there are several web articles\n",
-    "that do so, for example, [here](https://machinelearningmastery.com/how-to-implement-multi-head-attention-from-scratch-in-tensorflow-and-keras/)\n",
-    "\n",
-    "\n",
-    "\n",
     "**Suggested reading**\n",
     "\n",
     "There is an excellent tutorial on Attention and the Transformer which I recommend:\n",
     "- [Tensorflow tutorial: Neural machine translation with a Transformer and Keras](https://www.tensorflow.org/text/tutorials/transformer)\n",
     "\n",
+    "\n",
+    "**Deeper dive**\n",
+    "- [Implementing Attention](Attention_Lookup.ipynb)\n",
+    "- [Residual connections](RNN_Residual_Networks.ipynb)\n",
     "\n",
     "\n"
    ]
@@ -336,6 +324,22 @@
     }
    },
    "source": [
+    "# Week 4\n",
+    "\n",
+    "## Intro to HuggingFace\n",
+    "\n",
+    "- [HuggingFace intro](Transfer_Learning_HF.ipynb)\n",
+    "    - [linked notebook: Using a pretrained Sequence Classifier](HF_quick_intro_to_models.ipynb) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
     "## Datasets: Big data in small memory\n",
     "\n",
     "**Plan**\n",
@@ -345,8 +349,6 @@
     "We will spend some time examining the code for the Transformer.\n",
     "\n",
     "We will also introduce the TensorFlow Dataset (TFDS) API, a way to consume large datasets using a limited amount of memory.\n",
-    "\n",
-    "THIS WILL BE A VERY CODE-INTENSIVE WEEK\n",
     "\n",
     "\n",
     "**Plan**\n",
@@ -366,11 +368,77 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Beyond the LLM\n",
+    "\n",
+    "**Plan**\n",
+    "\n",
+    "The LLM is trained to \"predict the next\" token.\n",
+    "\n",
+    "Although this sounds boring, it is the basis of a Universal API for problem solving.\n",
+    "\n",
+    "We also show the remarkable ability to adapt on Pre-Trained LLM to a new task *without* fine-tuning\n",
+    "- and without changing any parameters !\n",
+    "\n",
+    "[Beyond the LLM](Review_LLM.ipynb#Beyond-the-LLM)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Transformers: Scaling\n",
+    "\n",
+    "We now have the capabilities to build models with extremely large number of weights.\n",
+    "Is it possible to have too many weights ? \n",
+    "\n",
+    "Yes: weights, number of training examples and compute capacity\n",
+    "combine to determine the performance of a model.\n",
+    "\n",
+    "There is an empirical result that suggests that in order to take advantage of GPT-3's use of 175 billion weights\n",
+    "- 1000 times more compute is required than what was used\n",
+    "- 10 times more training examples is required compared to what was used\n",
+    "\n",
+    "[How large should my Transformer be ?](Transformers_Scaling.ipynb)\n",
+    "\n",
+    "**Suggested reading**\n",
+    "- [Scaling laws](https://arxiv.org/pdf/2001.08361.pdf)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Re-visiting the Transformer code: deeper details\n",
+    "\n",
+    "- [Implementing Attention](Attention_Lookup.ipynb)\n",
+    "- [Transformer code: parts that we skipped over](Transformer_Understanding_the_Pieces.ipynb#General)\n",
+    "    - Residual connections, Embeddings, Positional Encoding\n",
+    "- [Residual connections](RNN_Residual_Networks.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
      "slide_type": "subslide"
     }
    },
    "source": [
-    "# Week 4\n",
+    "\n",
     "\n",
     "## Synthetic Data: Autoencoders\n",
     "\n",
@@ -417,7 +485,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "## Synthetic Data"
+   ]
   },
   {
    "cell_type": "markdown",
