--- a/Review_LLM.ipynb
+++ b/Review_LLM.ipynb
@@ -188,9 +188,21 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
-    "#  In-context Learning \n",
+    "\n",
+    "# Beyond the LLM\n",
+    "\n",
+    "\n",
+    "- [PreTrain_Prompt_Predict](NLP_Beyond_LLM.ipynb)\n",
+    "- [From LLM to Bing Search](From_GPT_to_BingSearch.ipynb)\n",
+    "\n",
+    "\n",
+    "##  Universal API/In-context Learning \n",
     "\n",
     "In addition to a Large Language Model easily adapting to a new task via Fine-Tuning\n",
     "- LLM's seem to have the ability to solve new Target tasks\n",
@@ -206,10 +218,6 @@
     "\n",
     "- [Experiment in In context learning: Colab](https://colab.research.google.com/github/kenperry-public/ML_Advanced_Fall_2023/blob/master/HF_inference_play.ipynb)\n",
     "- [Experiment in In context learning: local](HF_inference_play.ipynb)\n",
-    "\n",
-    "## Beyond the LLM\n",
-    "- [PreTrain_Prompt_Predict](NLP_Beyond_LLM.ipynb)\n",
-    "- [From LLM to Bing Search](From_GPT_to_BingSearch.ipynb)\n",
     "\n",
     "<!--- #include (squad_show.csv) --->\n"
    ]
@@ -266,7 +274,7 @@
    "toc_cell": false,
    "toc_position": {},
    "toc_section_display": true,
-   "toc_window_display": false
+   "toc_window_display": true
   }
  },
  "nbformat": 4,
