--- a/Transformer_Understanding_the_Pieces.ipynb
+++ b/Transformer_Understanding_the_Pieces.ipynb
@@ -218,7 +218,105 @@
     }
    },
    "source": [
-    "## Encoder\n",
+    "## Embedding\n",
+    "\n",
+    "Words (really: tokens) are *categorical* variables.\n",
+    "\n",
+    "Categorical variables are usually encoded as long vectors via One Hot Encoding (OHE)\n",
+    "- very long: number of distinct elements in class\n",
+    "    - e.g., number of words in vocabulary\n",
+    "- *sparse*: only a single non-zero element in the vector\n",
+    "- the similarity (e.g., dot product) of two related words (e.g., \"cat\", \"cats\") is zero !\n",
+    "    - same as for two unrelated words (e.g., \"cat\", \"car\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "An *Embedding* is a a *short* and *dense* vector representation of words (tokens).\n",
+    "\n",
+    "In addition to being shorter (and dense: many non-zero elements possible) their construction results in\n",
+    "- the similarity of embeddings for two related words being *non-zero*\n",
+    "\n",
+    "This makes Embeddings much more valuable for NLP."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "The *Embedding Layer* converts the OHE representation to an Embedding.\n",
+    "\n",
+    "See the [module from the Intro course](NLP_Embeddings.ipynb) for details."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Positional Encoding\n",
+    "\n",
+    "The Transformer input is a *sequence*\n",
+    "- there is a total ordering between elements based on absolute position\n",
+    "\n",
+    "The Transformer needs to be able to discern\n",
+    "- at least: the *relative* ordering of two elements in different positions in the sequence"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "The *Positional Encoding* layer \n",
+    "- adds a vector that encodes position\n",
+    "- to the Embedding\n",
+    "- such that the Transformer has a representation with both meaning and positions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "This is much more involved than simply using an integer to encode the position.\n",
+    "\n",
+    "The fundamental operation of a Neural Network is matrix multiplication\n",
+    "- the positional encoding needs to be preserved as it traverses the layers\n",
+    "\n",
+    "The details are not trivial.\n",
+    "\n",
+    "See the module on [Positional Embeddings](Transformer_PositionalEmbedding.ipynb) if you are interested."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Encoder\n",
     "\n",
     "The Encoder style Transformer can either be used \n",
     "- stand-alone: create a fixed length, alternate length representation of the input\n",
@@ -279,7 +377,7 @@
     }
    },
    "source": [
-    "## Decoder\n",
+    "# Decoder\n",
     "\n",
     "The salient characteristic of a Decoder style Transformer is the *autoregressive* behavior\n",
     "- generates an output one token at a time\n",
@@ -446,7 +544,7 @@
    "toc_cell": false,
    "toc_position": {},
    "toc_section_display": true,
-   "toc_window_display": false
+   "toc_window_display": true
   }
  },
  "nbformat": 4,
