Lesson 4; lesson 5 tbd

--- a/Index_Advanced.ipynb
+++ b/Index_Advanced.ipynb
@@ -232,6 +232,7 @@
     "\n",
     "- [The Transformer: Understanding the Pieces](Transformer_Understanding_the_Pieces.ipynb)\n",
     "- [The Transformer: Code](Transformer_code.ipynb)\n",
+    "- [Choosing a Transformer architecture](Transforming_Choosing_a_PreTrained_Model.ipynb)\n",
     "\n",
     "**Suggested reading**\n",
     "\n",
@@ -326,7 +327,10 @@
    "source": [
     "# Week 4\n",
     "\n",
-    "## Intro to HuggingFace\n",
+    "Transformer wrap-up\n",
+    "- [Choosing a Transformer architecture](Transforming_Choosing_a_PreTrained_Model.ipynb)\n",
+    "\n",
+    "## Intro to HuggingFace (continued)\n",
     "\n",
     "- [HuggingFace intro](Transfer_Learning_HF.ipynb)\n",
     "    - [linked notebook: Using a pretrained Sequence Classifier](HF_quick_intro_to_models.ipynb) "
