--- a/Index_Advanced.ipynb
+++ b/Index_Advanced.ipynb
@@ -232,7 +232,7 @@
     "\n",
     "- [The Transformer: Understanding the Pieces](Transformer_Understanding_the_Pieces.ipynb)\n",
     "- [The Transformer: Code](Transformer_code.ipynb)\n",
-    "- [Choosing a Transformer architecture](Transforming_Choosing_a_PreTrained_Model.ipynb)\n",
+    "- [Choosing a Transformer architecture](Transformer_Choosing_a_PreTrained_Model.ipynb)\n",
     "\n",
     "**Suggested reading**\n",
     "\n",
@@ -485,12 +485,122 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
-    "## Synthetic Data"
+    "# Week 5 (tentative)\n",
+    "\n",
+    "## Synthetic Data: GANs\n",
+    "\n",
+    "We introduce a new type of model that can be used to generate synthetic data: the Generative Adversarial Network (GAN).  It uses a competitive process involving two Neural Networks in order to iteratively\n",
+    "produce synthetic examples of increasing fidelity to the true data.\n",
+    "\n",
+    "- [GAN: basic](GAN_Generative.ipynb)\n",
+    "- [GAN loss](GAN_Loss_Generative.ipynb)\n",
+    "- [Wasserstein GAN](Wasserstein_GAN_Generative.ipynb)\n",
+    "\n",
+    "**Notebooks**\n",
+    "- [GAN to Generate Faces](CelebA_01_deep_convolutional_generative_adversarial_network.ipynb)\n",
+    "    \n",
+    "**Suggested reading**\n",
+    "- [Generative Adversarial Nets](https://arxiv.org/pdf/1406.2661.pdf)\n",
+    "- [TensorFlow Tutorial DCGAN](https://colab.research.google.com/github/tensorflow/docs/blob/master/site/en/tutorials/generative/dcgan.ipynb)\n",
+    "    - this is a tutorial from which our code notebook was derived\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "## Social concerns \n",
+    "\n",
+    "### Model bias\n",
+    "- show model cards\n",
+    "\n",
+    "### Environmental\n",
+    "\n",
+    "Training a Large Language Model uses substantial compute, which means lots of energy and, hence,\n",
+    "environmental impact.\n",
+    "\n",
+    "There is also a cost to *using* (i.e., inference) a trained model.\n",
+    "\n",
+    "Let's examine the impact.\n",
+    "\n",
+    "- [ML Carbon impact calculator](https://mlco2.github.io/impact/#compute)\n",
+    "    - GPT-3:\n",
+    "        - $\\approx 10^{23}$ Flops to train (see [Total compute: detailed calc for many models])(https://arxiv.org/pdf/2005.14165.pdf#page=46)\n",
+    "        - NVidia A100: 5*10^{15} Flops\n",
+    "        - 3600 seconds/hour\n",
+    "        - $\\frac{10^{23}}{ 3600 * 5 * 10^{15}} \\approx 28000$ hours to train on single A100\n",
+    "        - Calculated $\\text{CO}_2$ equivalent: $1.7* 10^4$ kilometers of car driving\n",
+    "\n",
+    "        - According to the [Scaling laws module](Index_Advanced.ipynb#Transformers:-Scaling)\n",
+    "            - we could potentially achieve the same performance of GPT-3 on a *smaller* (less environmentally impactful model)\n",
+    "    - [Energy: train vs inference](https://arxiv.org/pdf/2005.14165.pdf#page=39)\n",
+    "### Alignment\n",
+    "\n",
+    "Language models show great capabilities but also the potential for harm: biased and offensive generated text, for example.  Can we \"align\" a model's output with human values ?\n",
+    "\n",
+    "- [Alignment](Alignment.ipynb)\n",
+    "- [Alignment Anthropic](Alignment_Anthropics.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "## Training: tricks of the trade\n",
+    "\n",
+    "Training, in practice, involves more than a model and a training set\n",
+    "- Using multiple machines/GPU's: expect something to fail in the middle\n",
+    "- Loss does not always decrease with increasing epoch\n",
+    "    - Learning rate schedule \"mid-flight corrections\"\n",
+    "\n",
+    "Some practical lessons are found [here](Training_a_LLM_practical.ipynb).\n",
+    "\n",
+    "**Suggested reading**\n",
+    "- [OPT: Open Pre Trained Model](https://arxiv.org/pdf/2205.01068.pdf)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "## Parameter Efficient Transfer Learning\n",
+    "\n",
+    "Transfer learning may be the \"future of Deep Learning\" in that we can adapt models (that are too big for us to train on our own) to our own tasks.\n",
+    "\n",
+    "But Fine-Tuning a Pre-Trained model involves training a lot of parameters when the base model is large.\n",
+    "\n",
+    "This may be difficult for a variety of reasons.\n",
+    "\n",
+    "Can we adapt a Pre-Trained base model to a new task *without* training a large number of parameters ?\n",
+    "\n",
+    "- [Parameter Efficient Transfer Learning](ParameterEfficient_TransferLearning.ipynb)\n",
+    "\n",
+    "**Suggested reading**\n",
+    "\n",
+    "- [Parameter Efficient Transfer Learning - article](https://lightning.ai/pages/community/article/understanding-llama-adapters/)\n",
+    "\n",
+    "Adapters\n",
+    "- [Parameter Efficient Transfer Learning for NLP](https://arxiv.org/pdf/1902.00751.pdf)\n",
+    "- [LLM Adapters](https://arxiv.org/pdf/2304.01933.pdf)\n"
    ]
   },
   {
@@ -504,6 +614,23 @@
     "# Assignments\n",
     "\n",
     "Your assignments should follow the [Assignment Guidelines](assignments/Assignment_Guidelines.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Assignments\n",
+    "\n",
+    "Your assignments should follow the [Assignment Guidelines](assignments/Assignment_Guidelines.ipynb)\n",
+    "\n",
+    "## Final Project\n",
+    "\n",
+    "[Assignment notebook](assignments/FineTuning_HF/FineTune_FinancialPhraseBank.ipynb)"
    ]
   },
   {
