--- a/Index_Advanced.ipynb
+++ b/Index_Advanced.ipynb
@@ -550,7 +550,7 @@
     "Language models show great capabilities but also the potential for harm: biased and offensive generated text, for example.  Can we \"align\" a model's output with human values ?\n",
     "\n",
     "- [Alignment](Alignment.ipynb)\n",
-    "- [Alignment Anthropic](Alignment_Anthropics.ipynb)"
+    "- [Alignment Anthropic](Alignment_Anthropic.ipynb)"
    ]
   },
   {
